començant gestió variables globals... falta testejar bé

--- a/EasyProduction/app/src/main/res/layout/activity_main.xml
+++ b/EasyProduction/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -46,12 +47,30 @@
             android:text="Disconnect" />
 
         <Button
-            android:id="@+id/start_button"
+            android:id="@+id/state_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="onClickStartButton"
-            android:text="Start" />
+            android:onClick="onClickStateButton"
+            android:text="current state" />
+
+        <Button
+            android:id="@+id/global_vars"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClickVarsButton"
+            android:text="global vars" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/about"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="about"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
