--- a/EasyProduction/app/src/main/res/layout/activity_robot_state.xml
+++ b/EasyProduction/app/src/main/res/layout/activity_robot_state.xml
@@ -84,12 +84,12 @@
             android:text="controlMode: Unknown" />
 
         <TextView
-            android:id="@+id/program_status"
+            android:id="@+id/program_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5sp"
             android:layout_weight="1"
-            android:text="programStatus: Unknown" />
+            android:text="programState: Unknown" />
     </LinearLayout>
 
     <TableLayout
@@ -501,10 +501,10 @@
         app:layout_constraintTop_toTopOf="@+id/linearLayout2" />
 
     <Button
-        android:id="@+id/index"
+        android:id="@+id/guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="index"
+        android:text="guide"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout2" />
