--- a/EasyProduction/app/src/main/res/layout/activity_global_variables.xml
+++ b/EasyProduction/app/src/main/res/layout/activity_global_variables.xml
@@ -19,10 +19,16 @@
 
     <TextView
         android:id="@+id/vars"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="4sp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="16dp"
         android:layout_weight="1"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/remember"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
