--- a/EasyProduction/app/src/main/res/layout/activity_global_variables.xml
+++ b/EasyProduction/app/src/main/res/layout/activity_global_variables.xml
@@ -49,7 +49,7 @@
             android:layout_margin="1sp"
             android:layout_weight="1"
             android:onClick="onClickAddButton"
-            android:text="add" />
+            android:text="ADD" />
 
         <Button
             android:id="@+id/delete"
@@ -58,7 +58,7 @@
             android:layout_margin="1sp"
             android:layout_weight="1"
             android:onClick="onClickDelButton"
-            android:text="del" />
+            android:text="DEL" />
 
     </LinearLayout>
 
@@ -116,16 +116,6 @@
 
     <Button
         android:id="@+id/all_vars"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:text="Track All Global Variables"
-        app:layout_constraintBottom_toTopOf="@+id/remember"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/remember"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -133,9 +123,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:text="REMEMBER: If you add variables while the program is running, to track them you have to stop the program and run it again."
-        android:textSize="12sp"
+        android:onClick="onClickAllVars"
+        android:text="SHOW ALL VARIABLES"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
