--- a/EasyProduction/app/src/main/res/layout/activity_global_variables.xml
+++ b/EasyProduction/app/src/main/res/layout/activity_global_variables.xml
@@ -49,7 +49,8 @@
             android:layout_margin="1sp"
             android:layout_weight="1"
             android:onClick="onClickAddButton"
-            android:text="ADD" />
+            android:text="ADD"
+            app:backgroundTint="@color/button_color" />
 
         <Button
             android:id="@+id/delete"
@@ -58,7 +59,8 @@
             android:layout_margin="1sp"
             android:layout_weight="1"
             android:onClick="onClickDelButton"
-            android:text="DEL" />
+            android:text="DEL"
+            app:backgroundTint="@color/button_color" />
 
     </LinearLayout>
 
@@ -125,6 +127,7 @@
         android:layout_marginBottom="16dp"
         android:onClick="onClickAllVars"
         android:text="SHOW ALL VARIABLES"
+        app:backgroundTint="@color/button_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
