app bastant acabada, falta testejar i potser afegir alguna funcionalitat més, netejar codi

--- a/EasyProduction/app/src/main/res/layout/activity_robot_state.xml
+++ b/EasyProduction/app/src/main/res/layout/activity_robot_state.xml
@@ -502,6 +502,7 @@
         android:id="@+id/guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickGuideButton"
         android:text="guide"
         app:backgroundTint="@color/button_color"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
