--- a/EasyProduction/app/src/main/res/layout/activity_main.xml
+++ b/EasyProduction/app/src/main/res/layout/activity_main.xml
@@ -82,6 +82,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:onClick="onClickAboutButton"
         android:text="about"
         app:backgroundTint="@color/button_color"
         app:layout_constraintEnd_toEndOf="parent"
